<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:text="@string/app_name"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                tools:ignore="MissingConstraints" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal_700" />

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/socket_path_text"
                        android:textColor="@color/purple_700"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/socket_path"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal_700" />

            </TableLayout>

            <CheckBox
                android:id="@+id/protocol_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protocol_version_text" />

            <CheckBox
                android:id="@+id/use_gles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_gles_text" />

            <CheckBox
                android:id="@+id/use_threads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_threads_text" />

            <CheckBox
                android:id="@+id/dxtn_decompress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dxtn_decompress_text" />

            <CheckBox
                android:id="@+id/restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart_services_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal_700" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="7dp"
                    android:text="@string/overlay_position_text"
                    android:textColor="@color/purple_700"
                    tools:ignore="MissingConstraints" />

                <RadioGroup
                    android:id="@+id/overlay_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/overlay_topleft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overlay_topleft_text" />

                    <RadioButton
                        android:id="@+id/overlay_centered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overlay_centered_text" />

                    <RadioButton
                        android:id="@+id/overlay_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overlay_hide_text" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/overlay_hide_info_text"
                    android:textSize="12sp"
                    tools:ignore="MissingConstraints" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal_700" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clean_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onClickClean"
                    android:text="@string/clean_text" />

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onClickStart"
                    android:text="@string/start_text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/information1"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information2"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information3"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/information4"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information5"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information6"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information7"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information8"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information9"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information10"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information11"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/information12"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/information13"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/information14"
                android:textColor="#103E12"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>